# serializer version: 1
# name: test_websocket_message
  dict({
    'backflush_enabled': False,
    'bbw_settings': None,
    'boilers': dict({
      <BoilerType.COFFEE: 'CoffeeBoiler1'>: dict({
        'current_temperature': 81,
        'enabled': True,
        'target_temperature': 94,
      }),
      <BoilerType.STEAM: 'SteamBoiler'>: dict({
        'current_temperature': 113,
        'enabled': True,
        'target_temperature': 131,
      }),
    }),
    'brew_active': False,
    'brew_active_duration': 0,
    'dose_hot_water': 8,
    'doses': dict({
      <PhysicalKey.A: 1>: 135,
      <PhysicalKey.B: 2>: 97,
      <PhysicalKey.C: 3>: 108,
      <PhysicalKey.D: 4>: 121,
    }),
    'plumbed_in': True,
    'prebrew_configuration': dict({
      <PhysicalKey.A: 1>: dict({
        'off_time': 1,
        'on_time': 0.5,
      }),
      <PhysicalKey.B: 2>: dict({
        'off_time': 1,
        'on_time': 0.5,
      }),
      <PhysicalKey.C: 3>: dict({
        'off_time': 3.299999952316284,
        'on_time': 3.299999952316284,
      }),
      <PhysicalKey.D: 4>: dict({
        'off_time': 2,
        'on_time': 2,
      }),
    }),
    'prebrew_mode': <PrebrewMode.PREINFUSION: 'TypeB'>,
    'scale': None,
    'smart_standby': dict({
      'enabled': True,
      'minutes': 10,
      'mode': <SmartStandbyMode.LAST_BREWING: 'LastBrewing'>,
    }),
    'turned_on': True,
    'wake_up_sleep_entries': dict({
      'Os2OswX': dict({
        'days': list([
          <WeekDay.MONDAY: 'monday'>,
          <WeekDay.TUESDAY: 'tuesday'>,
          <WeekDay.WEDNESDAY: 'wednesday'>,
          <WeekDay.THURSDAY: 'thursday'>,
          <WeekDay.FRIDAY: 'friday'>,
          <WeekDay.SATURDAY: 'saturday'>,
          <WeekDay.SUNDAY: 'sunday'>,
        ]),
        'enabled': False,
        'entry_id': 'Os2OswX',
        'steam': True,
        'time_off': '24:0',
        'time_on': '24:0',
      }),
    }),
    'water_contact': True,
  })
# ---
# name: test_websocket_message.1
  dict({
    'backflush_enabled': False,
    'bbw_settings': None,
    'boilers': dict({
      <BoilerType.COFFEE: 'CoffeeBoiler1'>: dict({
        'current_temperature': 36,
        'enabled': True,
        'target_temperature': 94,
      }),
      <BoilerType.STEAM: 'SteamBoiler'>: dict({
        'current_temperature': 50,
        'enabled': True,
        'target_temperature': 131,
      }),
    }),
    'brew_active': False,
    'brew_active_duration': 0,
    'dose_hot_water': 8,
    'doses': dict({
      <PhysicalKey.A: 1>: 135,
      <PhysicalKey.B: 2>: 97,
      <PhysicalKey.C: 3>: 108,
      <PhysicalKey.D: 4>: 121,
    }),
    'plumbed_in': True,
    'prebrew_configuration': dict({
      <PhysicalKey.A: 1>: dict({
        'off_time': 1,
        'on_time': 0.5,
      }),
      <PhysicalKey.B: 2>: dict({
        'off_time': 1,
        'on_time': 0.5,
      }),
      <PhysicalKey.C: 3>: dict({
        'off_time': 3.299999952316284,
        'on_time': 3.299999952316284,
      }),
      <PhysicalKey.D: 4>: dict({
        'off_time': 2,
        'on_time': 2,
      }),
    }),
    'prebrew_mode': <PrebrewMode.PREINFUSION: 'TypeB'>,
    'scale': None,
    'smart_standby': dict({
      'enabled': True,
      'minutes': 10,
      'mode': <SmartStandbyMode.LAST_BREWING: 'LastBrewing'>,
    }),
    'turned_on': True,
    'wake_up_sleep_entries': dict({
      'Os2OswX': dict({
        'days': list([
          <WeekDay.MONDAY: 'monday'>,
          <WeekDay.TUESDAY: 'tuesday'>,
          <WeekDay.WEDNESDAY: 'wednesday'>,
          <WeekDay.THURSDAY: 'thursday'>,
          <WeekDay.FRIDAY: 'friday'>,
          <WeekDay.SATURDAY: 'saturday'>,
          <WeekDay.SUNDAY: 'sunday'>,
        ]),
        'enabled': False,
        'entry_id': 'Os2OswX',
        'steam': True,
        'time_off': '24:0',
        'time_on': '24:0',
      }),
    }),
    'water_contact': True,
  })
# ---
